:syringe: update index

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <div class="container">
 
-    <h3 class="text-center mt-5 mb-5"><b>CASE SUMMARY IN NIGERIA AS AT APRIL 4TH 2020</b></h3>
+    <h3 class="text-center mt-5 mb-5"><b>DAILY COVID-19 CASE SUMMARY IN NIGERIA 2020</b></h3>
 
 
     <div class="table-responsive">
